# orbit

./: Cargo.toml  LICENSE.md  README.md  TODO.md
apriltag/: Cargo.toml  build.rs  wrapper.h
apriltag/src/: lib.rs
detect/: Cargo.toml
detect/src/: lines.rs  main.rs
orbit_helper/: Cargo.toml  README.md
orbit_helper/src/: known_devices.rs  main.rs  polling_stream_fork.rs  snap.rs  stream.rs
orbit_station/: .gitignore  Cargo.toml  LICENSE.md  README.md
orbit_station/src/: apriltag.rs  calibrate.rs  calibration.rs  camera.rs  demos.rs  display.rs  find_tags.rs  fragment.glsl  frame_receiver.rs  layout_engine.rs  main.rs  message.rs  mpeg_encoder.rs  picture.rs  state.rs  streams.rs  vertex.glsl  webcam.rs
orbit_station/src/shaders/: selection_box_fragment.glsl
orbit_types/: Cargo.toml
orbit_types/src/: lib.rs
