[package]
name = "orbit_helper"
version = "0.1.0"
authors = ["EtomicBomb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.73"
v4l = "0.10.2"
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
chrono = "0.4.19"
orbit_types = { path = "../orbit_types" }
