[package]
name = "orbit_types"
version = "0.1.0"
authors = ["EtomicBomb <ethan@ethan.ws>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
chrono = { version = "0.4.19", features = ["serde"] }
v4l = "0.10.2"